output/nimbus_dualmodel_1round_p4/foundry_validation/F-001_Swap_invariant_uses_a_10_000-based_fee_a/forge_stdout_attempt2.log
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:33:38:
   |
33 |     address internal constant WETH = 0xC02aaA39b223FE8D0A0E5C4F27eAD9083C756Cc2;
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

